--- a/src/DiceRoller/DiceRoller-styles.css
+++ b/src/DiceRoller/DiceRoller-styles.css
@@ -1,9 +1,10 @@
 .dice-roller {
-    max-width: 600px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 1rem;
     box-sizing: border-box;
     color: orange;
+    width: 100%;
 }
 
 @media (max-width: 600px) {
