--- a/src/DiceRoller/DiceRoller-styles.css
+++ b/src/DiceRoller/DiceRoller-styles.css
@@ -17,14 +17,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
-    justify-content: center;
     margin-bottom: 1rem;
     width: calc(100% - 1rem);
 }
 
 .dice-roller__dice-button {
     flex: 1 1 calc(25% - 0.5rem);
-    text-align: center;
     padding: 0.5rem;
     font-size: 1rem;
     cursor: pointer;
@@ -37,37 +35,53 @@
 }
 
 .dice-roller__modifier {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
     margin-bottom: 1rem;
     width: calc(100% - 1rem);
-}
+} 
 
 .dice-roller__modifier-controls {
     display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: 100%;
+}
+
+.dice-roller__adv-dis-buttons {
+    display: flex;
     gap: 1rem;
 }
 
-.dice-roller__modifier-field,
-.dice-roller__modifier-button {
-    flex: 1;
-    padding: 0.5rem;
-    text-align: center;
-    width: 25%;
+.dice-roller__modifier-buttons {
+    display: flex;
+    gap: 1rem;
 }
 
-.dice-roller__formula {
-    margin-bottom: 1rem;
-    width: calc(100% - 1rem);
+.dice-roller__modifier-button,
+.dice-roller__advantage-button,
+.dice-roller__disadvantage-button {
+    padding: 0.5rem;
+    cursor: pointer;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.dice-roller__modifier-formula {
     display: flex;
-    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
+    margin-top: 0.5rem;
+    width: 100%;
 }
 
 .dice-roller__formula-field {
     padding: 0.5rem;
-    margin-top: 0.5rem;
+    width: calc(80% - 0.5rem);
+}
+
+.dice-roller__modifier-field {
+    padding: 0.5rem;
+    width: calc(20% - 0.5rem);
 }
 
 .dice-roller__actions {
@@ -84,17 +98,7 @@
     cursor: pointer;
 }
 
-.dice-roller__adv-dis-buttons {
-    display: flex;
-    gap: 1rem;
-}
-
-.dice-roller__advantage-button,
-.dice-roller__disadvantage-button {
-    flex: 1;
-    padding: 0.5rem;
-    cursor: pointer;
-}
+/* Last roll section */
 
 .dice-roller__last-roll {
     display: flex;
@@ -138,5 +142,4 @@
     font-size: 20px;
     color: white;
     cursor: pointer;
-  }
-  
+}
