--- a/src/Character/CharacterGrid-styles.css
+++ b/src/Character/CharacterGrid-styles.css
@@ -8,7 +8,7 @@
 
 /* Картка персонажа */
 .character-card {
-    background-color: #fff;
+    background-color: #333;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 15px;
