--- a/src/DiceRoller/DiceRoller-styles.css
+++ b/src/DiceRoller/DiceRoller-styles.css
@@ -22,7 +22,7 @@
     right: 20px;
     width: 100%;
     max-width: 500px;
-    background-color: rgba(0, 0, 0, 0.95);
+    background-color: #333;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
